--- a/css/estilo.css
+++ b/css/estilo.css
@@ -47,6 +47,11 @@ body{
 	border-bottom: 1px solid #000;
 	background: linear-gradient(to left,#fff,#f5f5f5);
 }
+.header li{
+	float: left;
+	margin-top: 9%;
+	font-size: 0;
+}
 .menu{
 	display: none;
 	width: 100%;
@@ -231,7 +236,7 @@ body{
 }
 @media screen and (min-width: 414px) {
 	.i-rodape a{
-		margin: 3.5% 5.5%;
+		margin-left: 7%;
 	}
 	.btn-f{
 		top: 35px;
@@ -246,16 +251,50 @@ body{
 }
 @media screen and (min-width: 480px) {
 	.i-rodape a{
-		margin: 3.5% 6.5%;
+		margin-left: 8%;
+	}
+	.btn-f{
+		top: 40px;
+		right: 45px;
+	}
+	h2{
+		font-size: 1.4em;
+	}
+	p{
+		font-size: 1.3em;
 	}
 }
 @media screen and (min-width: 600px) {
 	.i-rodape a{
-		margin: 3.5% 7.5%;
+		margin-left: 11%;
+	}
+	.btn-f{
+		top: 50px;
+		right: 60px;
+	}
+	.header li{
+		font-size: 1.2em;
+	}
+	h2{
+		font-size: 1.7em;
+	}
+	p{
+		font-size: 1.6em;
 	}
 }
-@media screen and (min-width: 768px) {
-	h2 {
-		font-size: 2.5em;
+@media screen and (min-width: 720px) {
+	.i-rodape a{
+		margin-left: 12%;
 	}
+	.btn-f{
+		top: 65px;
+		right: 85px;
+	}
+	h2{
+		font-size: 1.7em;
+	}
+	p{
+		font-size: 1.6em;
+	}
+}
 }
