--- a/css/estilo.css
+++ b/css/estilo.css
@@ -25,7 +25,7 @@ body{
 .logo{
 	width: 50px;
 	height: 50px;
-	margin: 3% 4%;
+	margin: 5px 4%;
 	float: left;
 	background: url(../img/logo.png) center center/50px no-repeat;
 	font-size: 0;
@@ -33,7 +33,7 @@ body{
 .btn-menu{
 	width: 50px;
 	height: 50px;
-	margin: 3% 4%;
+	margin: 5px 4%;
 	float: right;
 	text-align: center;
 	color: #000;
@@ -43,14 +43,16 @@ body{
 .header{
 	float: left;
 	width: 100%;
-	height: 10%;
+	height: 56px;
 	border-bottom: 1px solid #000;
 	background: linear-gradient(to left,#fff,#f5f5f5);
 }
 .header li{
 	float: left;
-	margin-top: 8%;
+	margin-top: 30px;
 	font-size: 0;
+	text-decoration: none;
+	list-style: none;
 }
 .menu{
 	display: none;
@@ -121,7 +123,36 @@ body{
 	margin-top: 1%;
 	color: #777;
 }
-.exemplo-texto{
+.imagen{
+	float: left;
+	margin-top: 15px;
+}
+.imagen h2{
+	margin-top: 0%;
+	text-align: center;
+}
+.exemplo-texto1{
+	width: 100%;
+	height: 10%;
+	margin-top: 0%;
+	padding: 0% 5%;
+	text-align: left;
+	float: left;
+}
+.exemplo-texto1 h2{
+	margin-top: 2%;
+	text-align: center;
+}
+.exemplo-texto1 p{
+	margin-top: 0.5em;
+}
+.exemplo-texto1 li{
+	font-size: 1em;
+	text-align: center;
+	margin-top: 20px;
+	color: #c7c7c7;
+}
+.exemplo-texto2{
 	width: 100%;
 	height: 10%;
 	margin-top: 3%;
@@ -131,14 +162,14 @@ body{
 	border-top: 1px solid #000;
 	border-bottom: 1px solid #000;
 }
-.exemplo-texto h2{
+.exemplo-texto2 h2{
 	margin-top: 2%;
 	text-align: center;
 }
-.exemplo-texto p{
+.exemplo-texto2 p{
 	margin-top: 0.5em;
 }
-.exemplo-texto li{
+.exemplo-texto2 li{
 	font-size: 1em;
 	text-align: center;
 	margin-top: 1%;
@@ -161,9 +192,9 @@ body{
 	position: fixed;
 }
 .social i{
-	opacity: 0.7;
+	opacity: 0.6;
 	float: left;
-	background-color: #72f0ff;
+	background-color: #c7c7c7;
 	color: #777;
 	margin-bottom: 100%;
 	padding: 14%;
@@ -195,7 +226,7 @@ body{
 	width: 100%;
 	float: left;
 	padding: 2%;
-	margin: 3%;
+	margin: 2% 3%;
 	color: #366a82;
 	border: 1px solid #000;
 	border-radius: 10px;
@@ -241,6 +272,12 @@ body{
 		padding: 3% 4%;
 	}
 }
+@media screen and (min-width: 286px) {
+	.i-rodape a{
+		margin-left: 1%;
+		padding: 2% 4%;
+	}
+}
 @media screen and (min-width: 300px) {
 	.i-rodape a{
 		margin-left: 5%;
@@ -249,6 +286,7 @@ body{
 		top: 30px;
 		right: 30px;
 	}
+}
 @media screen and (min-width: 355px) {
 	.i-rodape a{
 		margin-left: 7%;
@@ -319,8 +357,16 @@ body{
 	}
 }
 @media screen and (min-width: 600px) {
+	h3{
+		font-size: 1.5em;
+		margin-bottom: 20px;
+	}
 	.i-rodape a{
 		margin-left: 12%;
+	}
+	.entrada{
+		height: 135px;
+		padding: 5px 0;
 	}
 	.btn-f{
 		top: 55px;
@@ -338,6 +384,28 @@ body{
 	p{
 		font-size: 1.6em;
 	}
+	.btn-email{
+		float: left;
+		padding: 0;
+		margin: 5px;
+		display: block;
+		width: 30%
+	}
+	.btn-email input{
+		padding: 10px;
+        margin-top: 5px;
+	}
+	.email{
+		float: left;
+		padding: 0;
+		margin: 5px;
+		display: block;
+		width: 55%;
+	}
+	.email input{
+		padding: 10px;
+        margin-top: 5px;
+	}
 }
 @media screen and (min-width: 640px) {
 	.i-rodape a{
@@ -353,9 +421,49 @@ body{
 	.header li{
 		font-size: 1.2em;
 	}
+}
+@media screen and (min-width: 700px) {
+	.imagen{
+		width: 50%;
+	}
+	.email input{
+		padding: 12px;
+	}
+	.btn-email input{
+		padding: 12px;
+	}
+	.exemplo-texto1{
+		width: 50%;
+	}
+	.exemplo-texto1 h2{
+		font-size: 1.5em;
+	}
+	.exemplo-texto1 p{
+		font-size: 1.3em;
+	}
+	.exemplo-texto1 li{
+		display: none;
+	}
+	.exemplo-texto2 li{
+		margin-top: 20px;
+		margin-bottom: 0;
+		font-size: 1.5em;
+	}
+	.exemplo-texto1 h2{
+		margin-top: 5%;
+	}
+	.i-rodape a{
+		margin-left: 11%;
+		padding: 2% 5%;
+	}
+	.btn-f{
+		top: 60px;
+		right: 80px;
+	}
+}
 @media screen and (min-width: 720px) {
 	.i-rodape a{
-		margin-left: 12%;
+		margin-left: 10%;
 	}
 	.social{
 		font-size: 2em;
@@ -364,35 +472,117 @@ body{
 		top: 65px;
 		right: 85px;
 	}
+}
 @media screen and (min-width: 768px) {
 	.btn-f{
 		top: 65px;
 		right: 85px;
 	}
+	.header{
+		height: 2%;
+	}
+	.cadastro{
+		padding: 0;
+		margin: 0 10%;
+		border-right: 1px solid #000;
+		border-left: 1px solid #000;
+		width: 80%;
+	}
+	.i-rodape a{
+		margin-left: 11%;
+	}
+}
 @media screen and (min-width: 800px) {
 	.btn-f{
 		top: 75px;
 		right: 95px;
 	}
 	.i-rodape a{
+		margin-left: 10%;
+	}
+	.btn-menu{
+		display: none;
+	}
+	.btn-f{
+		display: none;
+	}
+	.header{
+		width: 40%;
+	}
+	.menu{
+		display: block;
+		position: static;
+		width: 60%;
+		height: 61px;
+		background: rgba(255, 255, 255, 1);
+		border-bottom: 1px solid #000;
+		line-height: 56px;
+		padding: 0;
+		float: right;
+	}
+	.menu ul{
+		width: 100%;
+		padding: 0;
+		margin: 0;
+		border: none;
+		box-shadow: none;
+    	-webkit-box-shadow: none;
+		-moz-box-shadow: none;
+		border-radius: 0;
+		background: none;
+	}
+	.menu li{
+		margin: 0 10px;
+		float: left;
+		padding: 0;
+	}
+	.menu li a{
+		font-size: 1em;
+		padding: 5px;
+	}
+	.i-rodape a{
+		padding: 1.5% 5%;
+		margin-left: 11%;
+	}
+}
+}
+@media screen and (min-width: 900px) {
+	.cadastro{
+		width: 70%;
 		margin-left: 12%;
 	}
-
-@media screen and (min-width: 950px) {
-	.btn-f{
-		top: 85px;
-		right: 110px;
+	.menu li{
+		margin: 0 15px;
 	}
+}
+@media screen and (min-width: 950px) {
 	.i-rodape a{
 		margin-left: 12%;
 	}
 }
-@media screen and (min-width: 1024px) {
-	.btn-f{
-		top: 90px;
-		right: 120px;
+@media screen and (min-width: 1000px) {
+	.menu li{
+		margin: 0 20px;
 	}
 	.i-rodape a{
-		margin-left: 12%;
+		margin-left: 13%;
+	}
+}
+@media screen and (min-width: 1100px) {
+	.menu li{
+		margin: 0 25px;
+	}
+}
+@media screen and (min-width: 1200px) {
+	.menu li{
+		margin: 0 30px;
+	}
+}
+@media screen and (min-width: 1300px) {
+	.i-rodape a{
+		margin-left: 13%;
+	}
+	.menu li{
+		margin: 0 35px;
 	}
 }
